--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,13 +7,13 @@ on:
 
 jobs:  
   build:  
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:  
       - name: Checkout code  
         uses: actions/checkout@v2  
 
       - name: Set up Docker  
-        uses: docker/setup-buildx-action@v1  
+        uses: docker/setup-buildx-action@v2  
 
       - name: Build Docker image  
         run: docker build -t data-pipeline .  
