--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,22 +1,29 @@
-name: Data Pipeline CI/CD  
+name: Data Pipeline CI/CD
 
-on:  
-  push:  
-    branches:  
-      - main  
+on:
+  push:
+    branches:
+      - main
 
-jobs:  
-  build:  
+jobs:
+  build:
     runs-on: ubuntu-latest
-    steps:  
-      - name: Checkout code  
-        uses: actions/checkout@v2  
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up Docker  
-        uses: docker/setup-buildx-action@v2  
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker image  
-        run: docker build -t data-pipeline .  
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose- $(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
 
-      - name: Run pipeline  
-        run: docker-compose run pipeline  
+          docker-compose --version
+
+      - name: Build Docker image
+        run: docker build -t data-pipeline .
+
+      - name: Run pipeline
+        run: docker-compose run pipeline
