--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,12 +12,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-
-      - name: Install Docker Compose via pip
+      - name: Update system packages
         run: |
-          pip install docker-compose
+          sudo apt-get update
+          sudo apt-get upgrade -y
+
+      - name: Install Docker Compose via apt
+        run: |
+          sudo apt-get install -y docker-compose
           docker-compose --version
 
       - name: Build Docker image
